removed GraphQuery -- no more Graph.query(). This is crazy... Gremlin is full on embedded in Blueprints... sad day for Blueprints.